Aggiunti link a repo e disclaimer

--- a/Probabilità e Statistica.tex
+++ b/Probabilità e Statistica.tex
@@ -17,6 +17,7 @@
 \usepackage[scr]{rsfso}
 \usepackage{bm}
 \usepackage{float}
+\usepackage{hyperref}
 
 \theoremstyle{plain}
 \newtheorem{teorema}{Teorema}[section]
@@ -52,6 +53,7 @@
 
 \title{Appunti di Probabilità e Statistica}
 \author{Riccardo Agatea}
+\date{}
 
 \hypersetup{
     colorlinks=true, %set true if you want colored links
@@ -62,6 +64,10 @@
 \begin{document}
 \pagenumbering{gobble}
 \maketitle
+\begin{center}
+	Repo: \url{https://github.com/RiccardoAgatea/Probabilita-e-Statistica-2019}\\
+	Questi sono gli appunti che ho preso a lezione. Non sono stati controllati da alcun professore, se trovate errori fatemelo notare e correggo.
+\end{center}
 \newpage
 \pagenumbering{roman}
 \tableofcontents
